--- a/alienblaster/project/AndroidManifest.xml
+++ b/alienblaster/project/AndroidManifest.xml
@@ -5,7 +5,9 @@
       android:versionName="1.0">
     <application android:label="@string/app_name">
         <activity android:name=".DemoActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:screenOrientation="portrait"
+        >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -13,4 +15,8 @@
         </activity>
     </application>
     <uses-sdk android:minSdkVersion="4" />
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 </manifest> 
