--- a/alienblaster/project/AndroidManifest.xml
+++ b/alienblaster/project/AndroidManifest.xml
@@ -4,7 +4,7 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:label="@string/app_name">
-        <activity android:name=".DemoActivity"
+        <activity android:name=".MainActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
         >
