--- a/alienblaster/AppSettings.cfg
+++ b/alienblaster/AppSettings.cfg
@@ -3,3 +3,5 @@ AppFullName=de.schwardtnet.alienblaster
 ScreenOrientation=v
 AppDataDownloadUrl="http://sites.google.com/site/xpelyax/Home/alienblaster110_data.zip?attredirects=0&d=1"
 DownloadToSdcard=n
+SdlVideoResize=y
+NeedDepthBuffer=n
