Reverted to vertical screen layout - horizontal layout still takes only half of screen for unknown reasons

--- a/alienblaster/AppSettings.cfg
+++ b/alienblaster/AppSettings.cfg
@@ -1,6 +1,6 @@
 AppName="Alien Blaster"
 AppFullName=de.schwardtnet.alienblaster
-ScreenOrientation=h
+ScreenOrientation=v
 AppDataDownloadUrl="http://sites.google.com/site/xpelyax/Home/alienblaster110_data.zip?attredirects=0&d=1"
 DownloadToSdcard=n
 SdlVideoResize=y
