--- a/alienblaster/project/AndroidManifest.xml
+++ b/alienblaster/project/AndroidManifest.xml
@@ -3,7 +3,9 @@
       package="de.schwardtnet.alienblaster"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:label="@string/app_name">
+    <application android:label="@string/app_name" 
+                 android:debuggable="true"
+    >
         <activity android:name=".MainActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="landscape"
@@ -14,7 +16,7 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-sdk android:minSdkVersion="4" />
+    <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="8"/>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
