Added configurable readme section to ChangeAppsettings.sh that will be shown when data is downloading

--- a/alienblaster/AppSettings.cfg
+++ b/alienblaster/AppSettings.cfg
@@ -5,3 +5,4 @@ AppDataDownloadUrl="http://sites.google.com/site/xpelyax/Home/alienblaster110_da
 DownloadToSdcard=n
 SdlVideoResize=a
 NeedDepthBuffer=n
+ReadmeText='^Use accelerometer to navigate menus and control ship^Press "Menu" to select menu and for secondary fire^Press "Call" or touch screen for primary fire^Press "Volume Up/Down" to cycle through weapons'
