--- a/alienblaster/AppSettings.cfg
+++ b/alienblaster/AppSettings.cfg
@@ -5,5 +5,5 @@ AppDataDownloadUrl="http://sites.google.com/site/xpelyax/Home/alienblaster110_da
 DownloadToSdcard=n
 SdlVideoResize=a
 NeedDepthBuffer=n
-CompiledLibraries="sdl sdl_mixer tremor mad sdl_image png jpeg sdl_ttf freetype"
+CompiledLibraries="mad sdl_mixer sdl_image sdl_ttf"
 ReadmeText='^Use accelerometer to navigate menus and control ship^Press "Menu" to select menu and for secondary fire^Press "Call" or touch screen for primary fire^Press "Volume Up/Down" to cycle through weapons'
