Disabled libs unnecessary for Alien Blaster

--- a/alienblaster/AppSettings.cfg
+++ b/alienblaster/AppSettings.cfg
@@ -5,6 +5,6 @@ AppDataDownloadUrl="http://sites.google.com/site/xpelyax/Home/alienblaster110_da
 DownloadToSdcard=n
 SdlVideoResize=a
 NeedDepthBuffer=n
-MultiABI=y
-CompiledLibraries="mad sdl_mixer sdl_image sdl_ttf"
+MultiABI=n
+CompiledLibraries="sdl_mixer sdl_image"
 ReadmeText='^Use accelerometer to navigate menus and control ship^Press "Menu" to select menu and for secondary fire^Press "Call" or touch screen for primary fire^Press "Volume Up/Down" to cycle through weapons'
