--- a/alienblaster/AppSettings.cfg
+++ b/alienblaster/AppSettings.cfg
@@ -6,5 +6,7 @@ DownloadToSdcard=n
 SdlVideoResize=a
 NeedDepthBuffer=n
 MultiABI=n
+AppVersionCode=110001
+AppVersionName="1.1.0.p1"
 CompiledLibraries="sdl_mixer sdl_image"
 ReadmeText='^Use accelerometer to navigate menus and control ship^Press "Menu" to select menu and for secondary fire^Press "Call" or touch screen for primary fire^Press "Volume Up/Down" to cycle through weapons'
