--- a/alienblaster/AppSettings.cfg
+++ b/alienblaster/AppSettings.cfg
@@ -1,10 +1,10 @@
-LibSdlVersion=1.2
+LibSdlVersion=1.3
 AppName="Alien Blaster"
 AppFullName=de.schwardtnet.alienblaster
 ScreenOrientation=h
 AppDataDownloadUrl="http://sites.google.com/site/xpelyax/Home/alienblaster110_data.zip?attredirects=0&d=1"
 DownloadToSdcard=n
-SdlVideoResize=a
+SdlVideoResize=y
 NeedDepthBuffer=n
 MultiABI=n
 AppVersionCode=110001
