--- a/alienblaster/AppSettings.cfg
+++ b/alienblaster/AppSettings.cfg
@@ -2,7 +2,7 @@ LibSdlVersion=1.3
 AppName="Alien Blaster"
 AppFullName=de.schwardtnet.alienblaster
 ScreenOrientation=h
-AppDataDownloadUrl="http://sites.google.com/site/xpelyax/Home/alienblaster110_data.zip?attredirects=0&d=1"
+AppDataDownloadUrl="http://sites.google.com/site/xpelyax/Home/alienblaster110_data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/alienblaster110_data.zip"
 DownloadToSdcard=n
 SdlVideoResize=y
 NeedDepthBuffer=n
