Updated SDL 1.3 to rev. 4563, fixed compilation

--- a/alienblaster/AppSettings.cfg
+++ b/alienblaster/AppSettings.cfg
@@ -10,4 +10,5 @@ MultiABI=n
 AppVersionCode=110003
 AppVersionName="1.1.0.p3"
 CompiledLibraries="sdl_mixer sdl_image"
+AppCflags='-finline-functions -O2'
 ReadmeText='^Use accelerometer to navigate menus and control ship^Press "Menu" to select menu and for secondary fire^Press "Call" or touch screen for primary fire^Press "Volume Up/Down" to cycle through weapons'
