More settings for application in ChangeAppSettings.sh

--- a/alienblaster/AppSettings.cfg
+++ b/alienblaster/AppSettings.cfg
@@ -5,9 +5,12 @@ ScreenOrientation=h
 AppDataDownloadUrl="http://sites.google.com/site/xpelyax/Home/alienblaster110_data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/alienblaster110_data.zip"
 SdlVideoResize=y
 NeedDepthBuffer=n
+AppUsesMouse=n
+AppNeedsArrowKeys=y
+AppUsesJoystick=n
 MultiABI=n
 AppVersionCode=110003
 AppVersionName="1.1.0.p3"
 CompiledLibraries="sdl_mixer sdl_image"
 AppCflags='-finline-functions -O2'
-ReadmeText='^Use accelerometer to navigate menus and control ship^Press "Menu" to select menu and for secondary fire^Press "Call" or touch screen for primary fire^Press "Volume Up/Down" to cycle through weapons'
+ReadmeText='^You can press "Home" now - the data will be downloaded in background^In game press "Menu" for secondary fire, press "Volume Up/Down" to cycle through weapons'
