Added some support for multitouch events, it's still not working

--- a/alienblaster/AppSettings.cfg
+++ b/alienblaster/AppSettings.cfg
@@ -13,4 +13,4 @@ AppVersionCode=110003
 AppVersionName="1.1.0.p3"
 CompiledLibraries="sdl_mixer sdl_image"
 AppCflags='-finline-functions -O2'
-ReadmeText='^You can press "Home" now - the data will be downloaded in background^In game press "Menu" for secondary fire, press "Volume Up/Down" to cycle through weapons'
+ReadmeText='^You can press "Home" now - the data will be downloaded in background^In game press "Menu" for secondary fire, "Volume Up/Down" to cycle weapons^If your phone doesnt have joystick or trackball the accelerometer will be used'
