--- a/alienblaster/AppSettings.cfg
+++ b/alienblaster/AppSettings.cfg
@@ -1,4 +1,4 @@
-LibSdlVersion=1.2
+LibSdlVersion=1.3
 AppName="Alien Blaster"
 AppFullName=de.schwardtnet.alienblaster
 ScreenOrientation=h
@@ -9,8 +9,8 @@ AppUsesMouse=n
 AppNeedsArrowKeys=y
 AppUsesJoystick=n
 MultiABI=n
-AppVersionCode=110003
-AppVersionName="1.1.0.p3"
+AppVersionCode=110004
+AppVersionName="1.1.0.4"
 CompiledLibraries="sdl_mixer sdl_image"
 AppCflags='-finline-functions -O2'
 ReadmeText='^You can press "Home" now - the data will be downloaded in background^In game press "Menu" for secondary fire, "Volume Up/Down" to cycle weapons^If your phone doesnt have joystick or trackball the accelerometer will be used'
