Created symlinks to resources to quickly switch between apps

--- a/alienblaster/AppSettings.cfg
+++ b/alienblaster/AppSettings.cfg
@@ -1,16 +1,1 @@
-LibSdlVersion=1.3
-AppName="Alien Blaster"
-AppFullName=de.schwardtnet.alienblaster
-ScreenOrientation=h
-AppDataDownloadUrl="http://sites.google.com/site/xpelyax/Home/alienblaster110_data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/alienblaster110_data.zip"
-SdlVideoResize=y
-NeedDepthBuffer=n
-AppUsesMouse=n
-AppNeedsArrowKeys=y
-AppUsesJoystick=n
-MultiABI=n
-AppVersionCode=110004
-AppVersionName="1.1.0.4"
-CompiledLibraries="sdl_mixer sdl_image"
-AppCflags='-finline-functions -O2'
-ReadmeText='^You can press "Home" now - the data will be downloaded in background^In game press "Menu" for secondary fire, "Volume Up/Down" to cycle weapons^If your phone doesnt have joystick or trackball the accelerometer will be used'
+project/jni/application/src/AppSettings.cfg
