--- a/alienblaster/project/AndroidManifest.xml
+++ b/alienblaster/project/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="de.schwardtnet.alienblaster"
-      android:versionCode="110004"
-      android:versionName="1.1.0.4"
+      package="net.sourceforge.jooleem"
+      android:versionCode="01404"
+      android:versionName="0.1.4.04"
 >
     <application android:label="@string/app_name" 
                  android:icon="@drawable/icon"
