--- a/alienblaster/project/jni/application/jooleem_0.1.4/AppSettings.cfg
+++ b/alienblaster/project/jni/application/jooleem_0.1.4/AppSettings.cfg
@@ -5,9 +5,12 @@ ScreenOrientation=h
 AppDataDownloadUrl="http://sites.google.com/site/xpelyax/Home/jooleem_0.1.4_data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/jooleem_0.1.4_data.zip"
 SdlVideoResize=y
 NeedDepthBuffer=n
+AppUsesMouse=y
+AppNeedsArrowKeys=n
+AppUsesJoystick=n
 MultiABI=n
-AppVersionCode=01403
-AppVersionName="0.1.4.03"
+AppVersionCode=01404
+AppVersionName="0.1.4.04"
 CompiledLibraries="sdl_mixer sdl_image sdl_ttf"
 AppCflags='-finline-functions -O2'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
