Added more options to redefine common keys in AppSettings

--- a/alienblaster/project/jni/application/opentyrian/AppSettings.cfg
+++ b/alienblaster/project/jni/application/opentyrian/AppSettings.cfg
@@ -5,9 +5,10 @@ ScreenOrientation=h
 AppDataDownloadUrl="http://sites.google.com/site/xpelyax/Home/tyrian21-data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/tyrian21-data.zip"
 SdlVideoResize=y
 NeedDepthBuffer=n
-AppUsesMouse=n
+AppUsesMouse=SPACE
 AppNeedsArrowKeys=y
 AppUsesJoystick=n
+RedefinedKeys="LCTRL LALT RETURN RETURN"
 MultiABI=n
 AppVersionCode=2101
 AppVersionName="2.1.01"
