Experimental support for multitouch using joystick API

--- a/alienblaster/project/jni/application/alienblaster/AppSettings.cfg
+++ b/alienblaster/project/jni/application/alienblaster/AppSettings.cfg
@@ -5,9 +5,11 @@ ScreenOrientation=h
 AppDataDownloadUrl="http://sites.google.com/site/xpelyax/Home/alienblaster110_data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/alienblaster110_data.zip"
 SdlVideoResize=y
 NeedDepthBuffer=n
-AppUsesMouse=n
+AppUsesMouse=RETURN
 AppNeedsArrowKeys=y
 AppUsesJoystick=n
+AppUsesMultitouch=n
+RedefinedKeys=""
 MultiABI=n
 AppVersionCode=110004
 AppVersionName="1.1.0.4"
