New script RecompileAllApps.sh for auto-recompilation

--- a/project/jni/application/alienblaster/AppSettings.cfg
+++ b/project/jni/application/alienblaster/AppSettings.cfg
@@ -1,3 +1,4 @@
+AppSettingVersion=1
 LibSdlVersion=1.3
 AppName="Alien Blaster"
 AppFullName=de.schwardtnet.alienblaster
@@ -5,14 +6,14 @@ ScreenOrientation=h
 AppDataDownloadUrl="http://sites.google.com/site/xpelyax/Home/alienblaster110_data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/alienblaster110_data.zip"
 SdlVideoResize=y
 NeedDepthBuffer=n
-AppUsesMouse=RETURN
+AppUsesMouse=n
 AppNeedsArrowKeys=y
 AppUsesJoystick=n
 AppUsesMultitouch=n
-RedefinedKeys=""
+RedefinedKeys="RETURN LCTRL PAGEUP PAGEDOWN LCTRL"
 MultiABI=n
-AppVersionCode=110004
-AppVersionName="1.1.0.4"
+AppVersionCode=110005
+AppVersionName="1.1.0.05"
 CompiledLibraries="sdl_mixer sdl_image"
 AppCflags='-finline-functions -O2'
-ReadmeText='^You can press "Home" now - the data will be downloaded in background^In game press "Menu" for secondary fire, "Volume Up/Down" to cycle weapons^If your phone doesnt have joystick or trackball the accelerometer will be used'
+ReadmeText='^You can press "Home" now - the data will be downloaded in background^In game press "Menu" for secondary fire, "Volume Up/Down" to cycle weapons'
