--- a/project/jni/application/opentyrian/AppSettings.cfg
+++ b/project/jni/application/opentyrian/AppSettings.cfg
@@ -1,3 +1,4 @@
+AppSettingVersion=1
 LibSdlVersion=1.2
 AppName="OpenTyrian"
 AppFullName=com.googlecode.opentyrian
@@ -5,13 +6,14 @@ ScreenOrientation=h
 AppDataDownloadUrl="http://sites.google.com/site/xpelyax/Home/tyrian21-data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/tyrian21-data.zip"
 SdlVideoResize=y
 NeedDepthBuffer=n
-AppUsesMouse=SPACE
+AppUsesMouse=n
 AppNeedsArrowKeys=y
 AppUsesJoystick=n
-RedefinedKeys="LCTRL LALT RETURN RETURN"
+AppUsesMultitouch=n
+RedefinedKeys="SPACE RETURN LCTRL LALT RETURN"
 MultiABI=n
-AppVersionCode=2101
-AppVersionName="2.1.01"
+AppVersionCode=2102
+AppVersionName="2.1.02"
 CompiledLibraries="sdl_net"
 AppCflags='-finline-functions -O2'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
