--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="de.schwardtnet.alienblaster"
-      android:versionCode="110005"
-      android:versionName="1.1.0.05"
+      package="com.googlecode.opentyrian"
+      android:versionCode="2102"
+      android:versionName="2.1.02"
 >
     <application android:label="@string/app_name" 
                  android:icon="@drawable/icon"
