Added lot of new config options - onscreen keyboard size, accelerometer sensitivity, trackball dampening, and audio buffer size (for slow devices)

--- a/project/jni/application/opentyrian/AppSettings.cfg
+++ b/project/jni/application/opentyrian/AppSettings.cfg
@@ -1,4 +1,4 @@
-AppSettingVersion=1
+AppSettingVersion=2
 LibSdlVersion=1.2
 AppName="OpenTyrian"
 AppFullName=com.googlecode.opentyrian
@@ -12,8 +12,9 @@ AppUsesJoystick=n
 AppUsesMultitouch=n
 RedefinedKeys="SPACE RETURN LCTRL LALT RETURN"
 MultiABI=n
-AppVersionCode=2102
-AppVersionName="2.1.02"
+AppVersionCode=2103
+AppVersionName="2.1.03"
 CompiledLibraries="sdl_net"
 AppCflags='-finline-functions -O2'
+AppLdflags=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
