--- a/project/jni/application/opentyrian/AppSettings.cfg
+++ b/project/jni/application/opentyrian/AppSettings.cfg
@@ -1,9 +1,9 @@
-AppSettingVersion=2
+AppSettingVersion=4
 LibSdlVersion=1.2
 AppName="OpenTyrian"
 AppFullName=com.googlecode.opentyrian
 ScreenOrientation=h
-AppDataDownloadUrl="http://sites.google.com/site/xpelyax/Home/tyrian21-data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/tyrian21-data.zip"
+AppDataDownloadUrl="^Data files size is 10 Mb|http://sites.google.com/site/xpelyax/Home/tyrian21-data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/tyrian21-data.zip"
 SdlVideoResize=y
 NeedDepthBuffer=n
 AppUsesMouse=n
@@ -11,9 +11,10 @@ AppNeedsArrowKeys=y
 AppUsesJoystick=n
 AppUsesMultitouch=n
 RedefinedKeys="SPACE RETURN LCTRL LALT RETURN"
+AppTouchscreenKeyboardKeysAmount=4
 MultiABI=n
-AppVersionCode=2103
-AppVersionName="2.1.03"
+AppVersionCode=2104
+AppVersionName="2.1.04"
 CompiledLibraries="sdl_net"
 AppCflags='-finline-functions -O2'
 AppLdflags=''
