--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.sourceforge.sc2"
-      android:versionCode="1001"
-      android:versionName="1.0.01"
+      package="com.googlecode.opentyrian"
+      android:versionCode="2104"
+      android:versionName="2.1.04"
 >
     <application android:label="@string/app_name" 
                  android:icon="@drawable/icon"
