--- a/project/jni/application/alienblaster/AppSettings.cfg
+++ b/project/jni/application/alienblaster/AppSettings.cfg
@@ -1,9 +1,9 @@
-AppSettingVersion=1
+AppSettingVersion=4
 LibSdlVersion=1.3
 AppName="Alien Blaster"
 AppFullName=de.schwardtnet.alienblaster
 ScreenOrientation=h
-AppDataDownloadUrl="http://sites.google.com/site/xpelyax/Home/alienblaster110_data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/alienblaster110_data.zip"
+AppDataDownloadUrl="Data size is 2 Mb|http://sites.google.com/site/xpelyax/Home/alienblaster110_data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/alienblaster110_data.zip"
 SdlVideoResize=y
 NeedDepthBuffer=n
 AppUsesMouse=n
@@ -11,9 +11,11 @@ AppNeedsArrowKeys=y
 AppUsesJoystick=n
 AppUsesMultitouch=n
 RedefinedKeys="RETURN LCTRL PAGEUP PAGEDOWN LCTRL"
+AppTouchscreenKeyboardKeysAmount=4
 MultiABI=n
-AppVersionCode=110005
-AppVersionName="1.1.0.05"
+AppVersionCode=110007
+AppVersionName="1.1.0.07"
 CompiledLibraries="sdl_mixer sdl_image"
 AppCflags='-finline-functions -O2'
+AppLdflags=''
 ReadmeText='^You can press "Home" now - the data will be downloaded in background^In game press "Menu" for secondary fire, "Volume Up/Down" to cycle weapons'
