--- a/project/jni/application/sc2/AppSettings.cfg
+++ b/project/jni/application/sc2/AppSettings.cfg
@@ -3,14 +3,14 @@ LibSdlVersion=1.2
 AppName="Ur-Quan Masters"
 AppFullName=com.sourceforge.sc2
 ScreenOrientation=h
-AppDataDownloadUrl="Main game data is 11 Mb|-http://prdownloads.sourceforge.net/sc2/uqm-0.6.0-content.uqm?download^3DO music (19 Mb)|-http://prdownloads.sourceforge.net/sc2/uqm-0.6.0-3domusic.uqm?download^UQM music remix pack 1 (50 Mb)|-http://prdownloads.sourceforge.net/sc2/uqm-remix-pack1.zip?download^UQM music remix pack 2 (60 Mb)|-http://prdownloads.sourceforge.net/sc2/uqm-remix-pack2.zip?download^UQM music remix pack 3 (40 Mb)|-http://prdownloads.sourceforge.net/sc2/uqm-remix-pack3.zip?download^Voice (115 Mb)|http://prdownloads.sourceforge.net/sc2/uqm-0.6.0-voice.uqm?download"
+AppDataDownloadUrl="Game data is 60 Mb|https://sites.google.com/site/xpelyax/Home/sc2-data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/sc2-data.zip"
 SdlVideoResize=y
 NeedDepthBuffer=n
 AppUsesMouse=n
 AppNeedsArrowKeys=y
 AppUsesJoystick=n
 AppUsesMultitouch=n
-RedefinedKeys="RETURN RCTRL KP_PLUS KP_MINUS ESCAPE F10"
+RedefinedKeys="RETURN RSHIFT KP_PLUS KP_MINUS ESCAPE F10"
 AppTouchscreenKeyboardKeysAmount=2
 MultiABI=n
 AppVersionCode=1001
