--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -3,6 +3,7 @@
       package="com.sourceforge.sc2"
       android:versionCode="1001"
       android:versionName="1.0.01"
+      android:installLocation="preferExternal"
 >
     <application android:label="@string/app_name" 
                  android:icon="@drawable/icon"
@@ -10,6 +11,8 @@
         <activity android:name=".MainActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="landscape"
+                  android:configChanges="mcc|mnc|locale|touchscreen|keyboard|keyboardHidden|navigation|orientation|screenLayout|fontScale|uiMode"
+                  android:windowSoftInputMode="stateUnspecified|adjustPan"
         >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
