Updated app settings for UQM

--- a/project/jni/application/sc2/AppSettings.cfg
+++ b/project/jni/application/sc2/AppSettings.cfg
@@ -1,4 +1,4 @@
-AppSettingVersion=5
+AppSettingVersion=6
 LibSdlVersion=1.2
 AppName="Ur-Quan Masters"
 AppFullName=com.sourceforge.sc2
@@ -12,6 +12,7 @@ AppUsesJoystick=n
 AppUsesMultitouch=n
 RedefinedKeys="RETURN RSHIFT KP_PLUS KP_MINUS ESCAPE F10"
 AppTouchscreenKeyboardKeysAmount=2
+AppTouchscreenKeyboardKeysAmountAutoFire=2
 MultiABI=n
 AppVersionCode=1002
 AppVersionName="1.0.02"
