First implementation of picture button theme, still no transparency

--- a/project/jni/application/opentyrian/AppSettings.cfg
+++ b/project/jni/application/opentyrian/AppSettings.cfg
@@ -1,9 +1,9 @@
-AppSettingVersion=4
+AppSettingVersion=6
 LibSdlVersion=1.2
 AppName="OpenTyrian"
 AppFullName=com.googlecode.opentyrian
 ScreenOrientation=h
-AppDataDownloadUrl="^Data files size is 11 Mb|http://sites.google.com/site/xpelyax/Home/tyrian21-data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/tyrian21-data.zip"
+AppDataDownloadUrl="Data files size is 11 Mb|http://sites.google.com/site/xpelyax/Home/tyrian21-data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/tyrian21-data.zip"
 SdlVideoResize=y
 NeedDepthBuffer=n
 AppUsesMouse=n
@@ -12,9 +12,10 @@ AppUsesJoystick=n
 AppUsesMultitouch=n
 RedefinedKeys="SPACE RETURN LCTRL LALT RETURN"
 AppTouchscreenKeyboardKeysAmount=4
+AppTouchscreenKeyboardKeysAmountAutoFire=1
 MultiABI=n
-AppVersionCode=2105
-AppVersionName="2.1.05"
+AppVersionCode=2106
+AppVersionName="2.1.06"
 CompiledLibraries="sdl_net"
 AppCflags='-finline-functions -O2'
 AppLdflags=''
