--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.googlecode.opentyrian"
-      android:versionCode="2106"
-      android:versionName="2.1.06"
+      package="com.sourceforge.sc2"
+      android:versionCode="1004"
+      android:versionName="1.0.04"
       android:installLocation="preferExternal"
 >
     <application android:label="@string/app_name" 
