Fixed another bug in Data Downloader

--- a/project/jni/application/alienblaster/AppSettings.cfg
+++ b/project/jni/application/alienblaster/AppSettings.cfg
@@ -1,4 +1,4 @@
-AppSettingVersion=4
+AppSettingVersion=6
 LibSdlVersion=1.3
 AppName="Alien Blaster"
 AppFullName=de.schwardtnet.alienblaster
@@ -12,9 +12,10 @@ AppUsesJoystick=n
 AppUsesMultitouch=n
 RedefinedKeys="RETURN LCTRL PAGEUP PAGEDOWN LCTRL"
 AppTouchscreenKeyboardKeysAmount=4
+AppTouchscreenKeyboardKeysAmountAutoFire=1
 MultiABI=n
-AppVersionCode=110007
-AppVersionName="1.1.0.07"
+AppVersionCode=110008
+AppVersionName="1.1.0.08"
 CompiledLibraries="sdl_mixer sdl_image"
 AppCflags='-finline-functions -O2'
 AppLdflags=''
