--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.sourceforge.sc2"
-      android:versionCode="1005"
-      android:versionName="1.0.05"
+      package="de.schwardtnet.alienblaster"
+      android:versionCode="110008"
+      android:versionName="1.1.0.08"
       android:installLocation="preferExternal"
 >
     <application android:label="@string/app_name" 
