Mouse enabled in Tyrian, not finished yet (also nasty bug with keyboard repeat fixed)

--- a/project/jni/application/opentyrian/AppSettings.cfg
+++ b/project/jni/application/opentyrian/AppSettings.cfg
@@ -6,7 +6,7 @@ ScreenOrientation=h
 AppDataDownloadUrl="Data files size is 11 Mb|http://sites.google.com/site/xpelyax/Home/tyrian21-data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/tyrian21-data.zip"
 SdlVideoResize=y
 NeedDepthBuffer=n
-AppUsesMouse=n
+AppUsesMouse=y
 AppNeedsArrowKeys=y
 AppUsesJoystick=n
 AppUsesMultitouch=n
