--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.teeworlds"
-      android:versionCode="5201"
-      android:versionName="0.5.2.01"
+      package="com.googlecode.opentyrian"
+      android:versionCode="2108"
+      android:versionName="2.1.08"
       android:installLocation="preferExternal"
 >
     <application android:label="@string/app_name" 
