TeeWorlds do not crash, but buggy as hell

--- a/project/jni/application/teeworlds/AppSettings.cfg
+++ b/project/jni/application/teeworlds/AppSettings.cfg
@@ -3,7 +3,7 @@ LibSdlVersion=1.2
 AppName="TeeWorlds"
 AppFullName=com.teeworlds
 ScreenOrientation=h
-AppDataDownloadUrl="Game data is 5 Mb|http://sourceforge.net/projects/libsdl-android/files/TeeWorlds/teeworlds.zip/download"
+AppDataDownloadUrl="Game data is 8 Mb|http://sourceforge.net/projects/libsdl-android/files/TeeWorlds/teeworlds.zip/download"
 SdlVideoResize=n
 NeedDepthBuffer=n
 AppUsesMouse=y
@@ -16,7 +16,7 @@ AppTouchscreenKeyboardKeysAmountAutoFire=1
 MultiABI=n
 AppVersionCode=5201
 AppVersionName="0.5.2.01"
-CompiledLibraries="sdl_image sdl_mixer"
-AppCflags='-O2 -DCONF_FAMILY_UNIX=1'
+CompiledLibraries="sdl_image"
+AppCflags='-O2'
 AppLdflags='-Lbin/ndk/local/armeabi -lfreetype'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
