Fixed GFX transparency in TeeWorlds

--- a/project/jni/application/teeworlds/AppSettings.cfg
+++ b/project/jni/application/teeworlds/AppSettings.cfg
@@ -10,9 +10,9 @@ AppUsesMouse=y
 AppNeedsArrowKeys=y
 AppUsesJoystick=n
 AppUsesMultitouch=n
-RedefinedKeys="RETURN RSHIFT KP_PLUS KP_MINUS ESCAPE F10"
-AppTouchscreenKeyboardKeysAmount=2
-AppTouchscreenKeyboardKeysAmountAutoFire=1
+RedefinedKeys="SPACE RETURN LEFT RIGHT SPACE ESCAPE"
+AppTouchscreenKeyboardKeysAmount=4
+AppTouchscreenKeyboardKeysAmountAutoFire=0
 MultiABI=n
 AppVersionCode=5201
 AppVersionName="0.5.2.01"
