Tyrian: fixed saving game with mouse, auto-fire enabled by default Teeworlds: small speed improvement (still not enough to call it playable)

--- a/project/jni/application/opentyrian/AppSettings.cfg
+++ b/project/jni/application/opentyrian/AppSettings.cfg
@@ -10,12 +10,12 @@ AppUsesMouse=y
 AppNeedsArrowKeys=y
 AppUsesJoystick=n
 AppUsesMultitouch=n
-RedefinedKeys="SPACE RETURN LCTRL LALT RETURN"
+RedefinedKeys="SPACE RETURN LCTRL LALT SPACE"
 AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=1
 MultiABI=n
-AppVersionCode=2108
-AppVersionName="2.1.08"
+AppVersionCode=2109
+AppVersionName="2.1.09"
 CompiledLibraries="sdl_net"
 AppCflags='-finline-functions -O2'
 AppLdflags=''
