Some improvements on Teeworlds port - it still crashes for no reason when I'm pressing 5-th button

--- a/project/jni/application/teeworlds/AppSettings.cfg
+++ b/project/jni/application/teeworlds/AppSettings.cfg
@@ -10,8 +10,8 @@ AppUsesMouse=y
 AppNeedsArrowKeys=y
 AppUsesJoystick=n
 AppUsesMultitouch=n
-RedefinedKeys="SPACE RETURN LEFT RIGHT SPACE ESCAPE"
-AppTouchscreenKeyboardKeysAmount=4
+RedefinedKeys="SPACE RETURN LEFT RIGHT q ESCAPE q e"
+AppTouchscreenKeyboardKeysAmount=6
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 MultiABI=n
 AppVersionCode=5201
