glDrawTex implementation almost working (just does not draw any texture yet :P )

--- a/project/jni/application/teeworlds/AppSettings.cfg
+++ b/project/jni/application/teeworlds/AppSettings.cfg
@@ -10,7 +10,7 @@ AppUsesMouse=y
 AppNeedsArrowKeys=y
 AppUsesJoystick=n
 AppUsesMultitouch=n
-RedefinedKeys="SPACE RETURN LEFT RIGHT q ESCAPE q e"
+RedefinedKeys="SPACE RETURN LEFT RIGHT LSHIFT ESCAPE RSHIFT LSHIFT"
 AppTouchscreenKeyboardKeysAmount=6
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 MultiABI=n
