--- a/project/jni/application/teeworlds/AppSettings.cfg
+++ b/project/jni/application/teeworlds/AppSettings.cfg
@@ -13,7 +13,7 @@ AppUsesMultitouch=n
 RedefinedKeys="SPACE RETURN LEFT RIGHT LSHIFT ESCAPE RSHIFT LSHIFT"
 AppTouchscreenKeyboardKeysAmount=6
 AppTouchscreenKeyboardKeysAmountAutoFire=0
-MultiABI=n
+MultiABI=y
 AppVersionCode=5201
 AppVersionName="0.5.2.01"
 CompiledLibraries="sdl_image"
