--- a/project/jni/application/lbreakout2/AndroidAppSettings.cfg
+++ b/project/jni/application/lbreakout2/AndroidAppSettings.cfg
@@ -1,5 +1,5 @@
 # The application settings for Android libSDL port
-AppSettingVersion=7
+AppSettingVersion=8
 LibSdlVersion=1.2
 AppName="LBreakout2"
 AppFullName=net.sourceforge.lgames.lbreakout2
@@ -18,6 +18,7 @@ MultiABI=n
 AppVersionCode=26101
 AppVersionName="2.6.1.01"
 CompiledLibraries="sdl_mixer sdl_image sdl_net intl"
+CustomBuildScript=y
 AppCflags='-DHAVE_CONFIG_H -finline-functions -O2'
 AppLdflags=''
 AppSubdirsBuild='src/dummy'
