OpenTyrian: Volume Up/Down keys navigate menu, mouse click will exit Enter High Score screen

--- a/project/jni/application/opentyrian/AndroidAppSettings.cfg
+++ b/project/jni/application/opentyrian/AndroidAppSettings.cfg
@@ -1,4 +1,5 @@
-AppSettingVersion=6
+# The application settings for Android libSDL port
+AppSettingVersion=8
 LibSdlVersion=1.2
 AppName="OpenTyrian"
 AppFullName=com.googlecode.opentyrian
@@ -14,9 +15,11 @@ RedefinedKeys="SPACE RETURN LCTRL LALT SPACE"
 AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=1
 MultiABI=n
-AppVersionCode=2109
-AppVersionName="2.1.09"
+AppVersionCode=2110
+AppVersionName="2.1.10 - minor fixes here and there, menu navigation with Volume Up/Down keys, use Menu button to select"
 CompiledLibraries="sdl_net"
+CustomBuildScript=n
 AppCflags='-finline-functions -O2'
 AppLdflags=''
+AppSubdirsBuild=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
