--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.sourceforge.sc2"
-      android:versionCode="1008"
-      android:versionName="1.0.08 - added 3DO voice pack, speed optimizations, UQM music remix packs do not work yet"
+      package="com.googlecode.opentyrian"
+      android:versionCode="2110"
+      android:versionName="2.1.10 - minor fixes here and there"
       android:installLocation="preferExternal"
 >
     <application android:label="@string/app_name" 
