More settings in OpenTyrian

--- a/project/jni/application/opentyrian/AndroidAppSettings.cfg
+++ b/project/jni/application/opentyrian/AndroidAppSettings.cfg
@@ -15,8 +15,8 @@ RedefinedKeys="SPACE RETURN LCTRL LALT SPACE"
 AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=1
 MultiABI=n
-AppVersionCode=2112
-AppVersionName="2.1.12 - Destruct minigame now accessible from OpenTyrian menu (it's a bit buggy), configurable auto-fire mode in the Keyboard menu, fixed ship unable to reach bottom of the screen when controlling it with touch"
+AppVersionCode=2113
+AppVersionName="2.1.13 - more options for auto-fire and touchscreen controls in Keyboard menu"
 CompiledLibraries="sdl_net"
 CustomBuildScript=n
 AppCflags='-finline-functions -O2'
