Background saving/restoring fully works (And pauses audio)

--- a/project/jni/application/opentyrian/AndroidAppSettings.cfg
+++ b/project/jni/application/opentyrian/AndroidAppSettings.cfg
@@ -15,8 +15,8 @@ RedefinedKeys="SPACE RETURN LCTRL LALT SPACE"
 AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=1
 MultiABI=n
-AppVersionCode=2113
-AppVersionName="2.1.13 - more options for auto-fire and touchscreen controls in Keyboard menu"
+AppVersionCode=2114
+AppVersionName="2.1.14 - game can be put to background with Home button and successfully restored back"
 CompiledLibraries="sdl_net"
 CustomBuildScript=n
 AppCflags='-finline-functions -O2'
