Updated UQM and readme

--- a/project/jni/application/sc2/AndroidAppSettings.cfg
+++ b/project/jni/application/sc2/AndroidAppSettings.cfg
@@ -15,8 +15,8 @@ RedefinedKeys="RETURN RSHIFT KP_PLUS KP_MINUS ESCAPE F10"
 AppTouchscreenKeyboardKeysAmount=2
 AppTouchscreenKeyboardKeysAmountAutoFire=2
 MultiABI=n
-AppVersionCode=1010
-AppVersionName="1.0.10 - fixed overwriting savegames, added support for 3DO videos (you should copy them from your 3DO game CD)"
+AppVersionCode=1011
+AppVersionName="1.0.11 - game can be put to background with Home button and successfully restored back"
 CompiledLibraries="sdl_image"
 CustomBuildScript=n
 AppCflags='-O2 -finline-functions -DTHREADLIB_SDL=1 -DTIMELIB=SDL -DOVCODEC_TREMOR=1 -DNETPLAY=1 -DHAVE_REGEX=1 -DHAVE_GETOPT_LONG=1 -DHAVE_ZIP=1'
