--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.googlecode.opentyrian"
-      android:versionCode="2114"
-      android:versionName="2.1.14 - game can be put to background with Home button and successfully restored back"
+      package="com.sourceforge.sc2"
+      android:versionCode="1011"
+      android:versionName="1.0.11 - game can be put to background with Home button and successfully restored back"
       android:installLocation="preferExternal"
 >
     <application android:label="@string/app_name" 
