--- a/project/jni/application/alienblaster/AndroidAppSettings.cfg
+++ b/project/jni/application/alienblaster/AndroidAppSettings.cfg
@@ -1,4 +1,5 @@
-AppSettingVersion=6
+# The application settings for Android libSDL port
+AppSettingVersion=8
 LibSdlVersion=1.3
 AppName="Alien Blaster"
 AppFullName=de.schwardtnet.alienblaster
@@ -14,9 +15,11 @@ RedefinedKeys="RETURN LCTRL PAGEUP PAGEDOWN LCTRL"
 AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=1
 MultiABI=n
-AppVersionCode=110009
-AppVersionName="1.1.0.09"
+AppVersionCode=110010
+AppVersionName="1.1.0.10 - fixed restoring application from background"
 CompiledLibraries="sdl_mixer sdl_image"
+CustomBuildScript=n
 AppCflags='-finline-functions -O2'
 AppLdflags=''
+AppSubdirsBuild=''
 ReadmeText='^You can press "Home" now - the data will be downloaded in background^In game press "Menu" for secondary fire, "Volume Up/Down" to cycle weapons'
