--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="org.enigmagame.enigma"
-      android:versionCode="1"
-      android:versionName="0.1"
+      package="de.schwardtnet.alienblaster"
+      android:versionCode="110011"
+      android:versionName="1.1.0.11 - fixed keys stuck sometimes for on-screen keyboard, fixed restoring app from background"
       android:installLocation="preferExternal"
 >
     <application android:label="@string/app_name" 
