Applying patches by Michi to Enigma

--- a/project/jni/application/enigma/AndroidAppSettings.cfg
+++ b/project/jni/application/enigma/AndroidAppSettings.cfg
@@ -1,11 +1,13 @@
 # The application settings for Android libSDL port
-AppSettingVersion=10
+AppSettingVersion=11
 LibSdlVersion=1.2
 AppName="enigma"
 AppFullName=org.enigmagame.enigma
 ScreenOrientation=h
-AppDataDownloadUrl="Enigma Game Data (16 MiB)|https://sites.google.com/site/xpelyax/Home/enigma-data.zip?attredirects=0&d=1"
+InhibitSuspend=y
+AppDataDownloadUrl="Enigma Game Data (6.5 MiB)|http://sites.google.com/site/droidsdl/data/enigma-data32.zip?attredirects=0&d=1"
 SdlVideoResize=y
+SdlVideoResizeKeepAspect=y
 NeedDepthBuffer=n
 AppUsesMouse=y
 AppNeedsArrowKeys=n
