You're now specifying both shared and static libraries through ChangeAppsettings.sh, LDFlags variable should be empty - that fixes dependencies and subtle bugs caused by multiple jobs in make when static lib not yet created but already linked to.

--- a/project/jni/application/atari800/AndroidAppSettings.cfg
+++ b/project/jni/application/atari800/AndroidAppSettings.cfg
@@ -18,9 +18,9 @@ AppTouchscreenKeyboardKeysAmountAutoFire=2
 MultiABI=n
 AppVersionCode=21001
 AppVersionName="2.1.0.01"
-CompiledLibraries="sdl_mixer"
+CompiledLibraries="sdl_mixer png"
 CustomBuildScript=n
 AppCflags='-O2 -finline-functions -DSOUND'
-AppLdflags='-Lobj/local/armeabi -lpng'
+AppLdflags=''
 AppSubdirsBuild=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
