--- a/project/jni/application/enigma/AndroidAppSettings.cfg
+++ b/project/jni/application/enigma/AndroidAppSettings.cfg
@@ -20,10 +20,10 @@ AppTouchscreenKeyboardKeysAmountAutoFire=0
 MultiABI=n
 AppVersionCode=1
 AppVersionName="0.1"
-CompiledLibraries="sdl_mixer sdl_image sdl_ttf intl lua"
+CompiledLibraries="sdl_mixer sdl_image sdl_ttf intl lua png xerces"
 CustomBuildScript=n
 AppCflags='-finline-functions -O2'
-AppLdflags='-lpng -lxerces'
+AppLdflags=''
 AppSubdirsBuild=''
 AppUseCrystaXToolchain=y
 ReadmeText='^You can press "Home" now - the data will be downloaded in background^Have fun playing enigma!^'
