--- a/project/jni/application/sc2/AndroidAppSettings.cfg
+++ b/project/jni/application/sc2/AndroidAppSettings.cfg
@@ -18,10 +18,10 @@ AppTouchscreenKeyboardKeysAmountAutoFire=0
 MultiABI=n
 AppVersionCode=1012
 AppVersionName="1.0.12 - fixed keys stuck sometimes for on-screen keyboard, also disabled auto-fire on user request"
-CompiledLibraries="sdl_image"
+CompiledLibraries="sdl_image tremor"
 CustomBuildScript=n
 AppCflags='-O2 -finline-functions -DTHREADLIB_SDL=1 -DTIMELIB=SDL -DOVCODEC_TREMOR=1 -DNETPLAY=1 -DHAVE_REGEX=1 -DHAVE_GETOPT_LONG=1 -DHAVE_ZIP=1'
-AppLdflags='-Lobj/local/armeabi -ltremor'
+AppLdflags=''
 AppSubdirsBuild=''
 AppUseCrystaXToolchain=n
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
