--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -18,10 +18,10 @@ AppTouchscreenKeyboardKeysAmountAutoFire=0
 MultiABI=y
 AppVersionCode=5202
 AppVersionName="0.5.2.02"
-CompiledLibraries="sdl_image"
+CompiledLibraries="sdl_image freetype"
 CustomBuildScript=n
 AppCflags='-O2'
-AppLdflags='-Lbin/ndk/local/armeabi -lfreetype'
+AppLdflags=''
 AppSubdirsBuild=''
 AppUseCrystaXToolchain=n
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
