Data files downloaded from SF.net by default for all apps

--- a/project/jni/application/alienblaster/AndroidAppSettings.cfg
+++ b/project/jni/application/alienblaster/AndroidAppSettings.cfg
@@ -1,23 +1,26 @@
 # The application settings for Android libSDL port
-AppSettingVersion=10
+AppSettingVersion=12
 LibSdlVersion=1.3
 AppName="Alien Blaster"
 AppFullName=de.schwardtnet.alienblaster
 ScreenOrientation=h
+InhibitSuspend=n
 AppDataDownloadUrl="Data size is 2 Mb|alienblaster110_data.zip|http://sites.google.com/site/xpelyax/Home/alienblaster110_data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/alienblaster110_data.zip"
 SdlVideoResize=y
+SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
 AppUsesMouse=n
 AppNeedsArrowKeys=y
 AppUsesJoystick=n
+AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
 RedefinedKeys="RETURN LCTRL PAGEUP PAGEDOWN LCTRL"
 AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=1
 MultiABI=n
-AppVersionCode=110011
-AppVersionName="1.1.0.11 - fixed keys stuck sometimes for on-screen keyboard, fixed restoring app from background"
+AppVersionCode=110012
+AppVersionName="1.1.0.12 - bundled data file with application, re-run startup config and select 'Very small' audio buffer to make audio lag less"
 CompiledLibraries="sdl_mixer sdl_image"
 CustomBuildScript=n
 AppCflags='-finline-functions -O2'
