--- a/project/jni/application/enigma/AndroidAppSettings.cfg
+++ b/project/jni/application/enigma/AndroidAppSettings.cfg
@@ -1,17 +1,18 @@
 # The application settings for Android libSDL port
-AppSettingVersion=11
+AppSettingVersion=12
 LibSdlVersion=1.2
 AppName="enigma"
 AppFullName=org.enigmagame.enigma
 ScreenOrientation=h
 InhibitSuspend=y
-AppDataDownloadUrl="Enigma Game Data (6.5 MiB)|http://sites.google.com/site/droidsdl/data/enigma-data32.zip?attredirects=0&d=1"
+AppDataDownloadUrl="Enigma Game Data (6.5 MiB)|http://sourceforge.net/projects/libsdl-android/files/Enigma/enigma-data32.zip/download|http://sites.google.com/site/droidsdl/data/enigma-data32.zip?attredirects=0&d=1"
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=y
 NeedDepthBuffer=n
 AppUsesMouse=y
 AppNeedsArrowKeys=n
 AppUsesJoystick=y
+AppHandlesJoystickSensitivity=y
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
 RedefinedKeys="RETURN LCTRL PAGEUP PAGEDOWN LCTRL"
