--- a/project/jni/application/jooleem_0.1.4/AndroidAppSettings.cfg
+++ b/project/jni/application/jooleem_0.1.4/AndroidAppSettings.cfg
@@ -2,7 +2,7 @@ LibSdlVersion=1.2
 AppName="Jooleem"
 AppFullName=net.sourceforge.jooleem
 ScreenOrientation=h
-AppDataDownloadUrl="http://sites.google.com/site/xpelyax/Home/jooleem_0.1.4_data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/jooleem_0.1.4_data.zip"
+AppDataDownloadUrl="Data files are 10 Mb|http://sourceforge.net/projects/libsdl-android/files/Jooleem/jooleem_0.1.4_data.zip/download|http://sites.google.com/site/xpelyax/Home/jooleem_0.1.4_data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/jooleem_0.1.4_data.zip"
 SdlVideoResize=y
 NeedDepthBuffer=n
 AppUsesMouse=y
