--- a/project/jni/application/opentyrian/AndroidAppSettings.cfg
+++ b/project/jni/application/opentyrian/AndroidAppSettings.cfg
@@ -4,7 +4,7 @@ LibSdlVersion=1.2
 AppName="OpenTyrian"
 AppFullName=com.googlecode.opentyrian
 ScreenOrientation=h
-AppDataDownloadUrl="Data files size is 11 Mb|http://sites.google.com/site/xpelyax/Home/tyrian21-data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/tyrian21-data.zip"
+AppDataDownloadUrl="Data files size is 11 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTyrian/tyrian21-data.zip/download|http://sites.google.com/site/xpelyax/Home/tyrian21-data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/tyrian21-data.zip"
 SdlVideoResize=y
 NeedDepthBuffer=n
 AppUsesMouse=y
