--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="de.schwardtnet.alienblaster"
-      android:versionCode="110012"
-      android:versionName="1.1.0.12 - bundled data file with application, re-run startup config and select 'Very small' audio buffer to make audio lag less"
+      package="org.enigmagame.enigma"
+      android:versionCode="1"
+      android:versionName="0.1"
       android:installLocation="preferExternal"
 >
     <application android:label="@string/app_name" 
