Updated Jooleem project - it crashes with HW accel enabled somewhere in SDL code but wirks in SW mode, so I've added some debug to SDL_androidvideo-1.2.c, and I'm planning to make test SDL project to check HW accel and alpha surfaces status.

--- a/project/jni/application/jooleem_0.1.4/AndroidAppSettings.cfg
+++ b/project/jni/application/jooleem_0.1.4/AndroidAppSettings.cfg
@@ -1,16 +1,30 @@
+# The application settings for Android libSDL port
+AppSettingVersion=12
 LibSdlVersion=1.2
 AppName="Jooleem"
 AppFullName=net.sourceforge.jooleem
 ScreenOrientation=h
+InhibitSuspend=n
 AppDataDownloadUrl="Data files are 10 Mb|http://sourceforge.net/projects/libsdl-android/files/Jooleem/jooleem_0.1.4_data.zip/download|http://sites.google.com/site/xpelyax/Home/jooleem_0.1.4_data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/jooleem_0.1.4_data.zip"
 SdlVideoResize=y
+SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
 AppUsesMouse=y
 AppNeedsArrowKeys=n
 AppUsesJoystick=n
+AppHandlesJoystickSensitivity=n
+AppUsesMultitouch=n
+NonBlockingSwapBuffers=n
+RedefinedKeys=""
+AppTouchscreenKeyboardKeysAmount=0
+AppTouchscreenKeyboardKeysAmountAutoFire=0
 MultiABI=n
-AppVersionCode=01403
-AppVersionName="0.1.4.03"
+AppVersionCode=01404
+AppVersionName="0.1.4.04"
 CompiledLibraries="sdl_mixer sdl_image sdl_ttf"
+CustomBuildScript=n
 AppCflags='-finline-functions -O2'
+AppLdflags=''
+AppSubdirsBuild=''
+AppUseCrystaXToolchain=n
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
