--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="net.sourceforge.clonekeenplus"
-      android:versionCode="32202"
-      android:versionName="0.3.2.2.02 - on-screen joystick now acts as analog joystick, with finer control over movement"
+      package="net.sourceforge.jooleem"
+      android:versionCode="01404"
+      android:versionName="0.1.4.04 - added HW acceleration"
       android:installLocation="preferExternal"
 >
     <application android:label="@string/app_name" 
