--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="net.sourceforge.jooleem"
-      android:versionCode="01404"
-      android:versionName="0.1.4.04 - added HW acceleration"
+      package="org.scummvm.sdl"
+      android:versionCode="12001"
+      android:versionName="1.2.0.01"
       android:installLocation="preferExternal"
 >
     <application android:label="@string/app_name" 
