--- a/project/jni/application/sc2/AndroidAppSettings.cfg
+++ b/project/jni/application/sc2/AndroidAppSettings.cfg
@@ -21,7 +21,7 @@ AppTouchscreenKeyboardKeysAmountAutoFire=0
 MultiABI=n
 AppVersionCode=1013
 AppVersionName="1.0.13"
-CompiledLibraries="sdl_image tremor"
+CompiledLibraries="sdl_image tremor ogg"
 CustomBuildScript=n
 AppCflags='-O2 -finline-functions -DTHREADLIB_SDL=1 -DTIMELIB=SDL -DOVCODEC_TREMOR=1 -DNETPLAY=1 -DHAVE_REGEX=1 -DHAVE_GETOPT_LONG=1 -DHAVE_ZIP=1'
 AppLdflags=''
