When you'll change app to build that won't be visible in Git commit. Also fixed application name not updated for translated strings.xml

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,8 @@ project/gen
 project/libs
 project/assets
 project/obj
+project/src
+project/res/values*
+project/AndroidManifest.xml
+project/jni/Settings.mk
 
