--- a/project/jni/application/sc2/AndroidAppSettings.cfg
+++ b/project/jni/application/sc2/AndroidAppSettings.cfg
@@ -15,12 +15,12 @@ AppUsesJoystick=y
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
-RedefinedKeys="RETURN RSHIFT KP_PLUS KP_MINUS ESCAPE F10"
+RedefinedKeys="RETURN RSHIFT KP_PLUS KP_MINUS RCTRL F10"
 AppTouchscreenKeyboardKeysAmount=2
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 MultiABI=n
-AppVersionCode=06914
-AppVersionName="0.6.9.14 - better controls for accelerometer and on-screen keyboard input"
+AppVersionCode=06915
+AppVersionName="0.6.9.15 - Emergency warp escape unit can now be activated by pressing Back key, so Menu key can be re-bound to game action"
 CompiledLibraries="sdl_image tremor ogg"
 CustomBuildScript=n
 AppCflags='-O2 -finline-functions -DTHREADLIB_SDL=1 -DTIMELIB=SDL -DOVCODEC_TREMOR=1 -DNETPLAY=1 -DHAVE_REGEX=1 -DHAVE_GETOPT_LONG=1 -DHAVE_ZIP=1 -DHAVE_JOYSTICK=1 -DDIRECTIONAL_JOYSTICK_MELEE=1'
