--- a/project/jni/application/pachi/AndroidAppSettings.cfg
+++ b/project/jni/application/pachi/AndroidAppSettings.cfg
@@ -19,8 +19,8 @@ RedefinedKeys="SPACE RETURN"
 AppTouchscreenKeyboardKeysAmount=1
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 MultiABI=n
-AppVersionCode=101
-AppVersionName="1.01"
+AppVersionCode=102
+AppVersionName="1.02 - fixed level background not shown"
 CompiledLibraries="sdl_mixer"
 CustomBuildScript=n
 AppCflags='-O2 -finline-functions'
