Fixed compilation of libvorbis

--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -1,15 +1,18 @@
 # The application settings for Android libSDL port
-AppSettingVersion=10
+AppSettingVersion=12
 LibSdlVersion=1.2
 AppName="TeeWorlds"
 AppFullName=com.teeworlds
 ScreenOrientation=h
+InhibitSuspend=n
 AppDataDownloadUrl="Game data is 8 Mb|http://sourceforge.net/projects/libsdl-android/files/TeeWorlds/teeworlds.zip/download"
 SdlVideoResize=n
+SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
 AppUsesMouse=y
 AppNeedsArrowKeys=y
 AppUsesJoystick=n
+AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN LEFT RIGHT LSHIFT ESCAPE RSHIFT LSHIFT"
