Updated versions for applications

--- a/project/jni/application/alienblaster/AndroidAppSettings.cfg
+++ b/project/jni/application/alienblaster/AndroidAppSettings.cfg
@@ -19,8 +19,8 @@ RedefinedKeys="RETURN LCTRL PAGEUP PAGEDOWN LCTRL"
 AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=1
 MultiABI=n
-AppVersionCode=110012
-AppVersionName="1.1.0.12 - bundled data file with application, re-run startup config and select 'Very small' audio buffer to make audio lag less"
+AppVersionCode=110013
+AppVersionName="1.1.0.13 - fixed crashes for some devices"
 CompiledLibraries="sdl_mixer sdl_image"
 CustomBuildScript=n
 AppCflags='-finline-functions -O2'
