--- a/project/jni/application/opentyrian/AndroidAppSettings.cfg
+++ b/project/jni/application/opentyrian/AndroidAppSettings.cfg
@@ -1,23 +1,26 @@
 # The application settings for Android libSDL port
-AppSettingVersion=10
+AppSettingVersion=12
 LibSdlVersion=1.2
 AppName="OpenTyrian"
 AppFullName=com.googlecode.opentyrian
 ScreenOrientation=h
+InhibitSuspend=n
 AppDataDownloadUrl="Data files size is 11 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTyrian/tyrian21-data.zip/download|http://sites.google.com/site/xpelyax/Home/tyrian21-data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/tyrian21-data.zip"
 SdlVideoResize=y
+SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
 AppUsesMouse=y
 AppNeedsArrowKeys=y
 AppUsesJoystick=n
+AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN LCTRL LALT SPACE"
 AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=1
 MultiABI=n
-AppVersionCode=2115
-AppVersionName="2.1.15 - fixed keys stuck sometimes for on-screen keyboard"
+AppVersionCode=2116
+AppVersionName="2.1.16 - fixed crashes for some devices"
 CompiledLibraries="sdl_net"
 CustomBuildScript=n
 AppCflags='-finline-functions -O2'
