--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -19,8 +19,8 @@ RedefinedKeys="SPACE RETURN LEFT RIGHT LSHIFT ESCAPE RSHIFT LSHIFT"
 AppTouchscreenKeyboardKeysAmount=6
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 MultiABI=y
-AppVersionCode=5202
-AppVersionName="0.5.2.02"
+AppVersionCode=5203
+AppVersionName="0.5.2.03 - fixed crashes for some devices"
 CompiledLibraries="sdl_image freetype"
 CustomBuildScript=n
 AppCflags='-O2'
